--- a/public/css/paginaPrincipal.css
+++ b/public/css/paginaPrincipal.css
@@ -1,4 +1,7 @@
 @import url(http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300ita‌​lic,400italic,500,500italic,700,700italic,900italic,900);
+
+.row { margin: 0; padding-left: 0; padding-right: 0;}
+
 html, body, html * {
   font-family: 'Roboto', sans-serif;
   font-weight: normal;
@@ -19,6 +22,7 @@ h3{
 body {
   padding-top: 130px;
 }
+
 
 @media (max-width: 1200px) {
   .imagenElectrodomestico {
