--- a/public/css/paginaPrincipal.css
+++ b/public/css/paginaPrincipal.css
@@ -1,24 +1,40 @@
 @import url(http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300ita‌​lic,400italic,500,500italic,700,700italic,900italic,900);
 
-html, body, html * {
+html{
   font-family: 'Roboto', sans-serif;
   font-weight: normal;
 }
 body {
   padding-top: 130px;
 }
+.navbar-text, .navbar-brand{
+  font-size: 2rem;
+}
+#telefonoPrincipal{
+  font-size: 3rem;
+  font-weight: bold;
+}
+#provinciaPrincipal{
+  font-size: 4rem;
+}
+#servicioTecnico{
+  font-weight: bold;
+}
+.encabezado {
+  font-size: 2.5rem;
+  font-weight: bold;
+}
+#textoPrincipal{
+  font-size: 2.5rem;
+}
+.tituloSeccion{
+  font-size: 2.5rem;
+}
 .imagenElectrodomestico {
   height: 250px;
 }
 .imagenCalidad {
   height: 350px;
-}
-.encabezado {
-  font-size: xx-large;
-  font-weight: bold;
-}
-h3{
-  font-size: large;
 }
 
 @media (max-width: 1200px) {
