--- a/public/css/paginaPrincipal.css
+++ b/public/css/paginaPrincipal.css
@@ -5,10 +5,18 @@ html{
   font-weight: normal;
 }
 body {
-  padding-top: 130px;
+  padding-top: 100px;
+}
+nav span{
+  color: blue;
 }
 .navbar-text, .navbar-brand{
   font-size: 2rem;
+  font-weight: bold;
+}
+#telefonoNav, #telefonoNav span{
+  font-size: 2.5rem;
+  color: #e70435;
 }
 #telefonoPrincipal{
   font-size: 3rem;
@@ -21,8 +29,12 @@ body {
   font-weight: bold;
 }
 .encabezado {
-  font-size: 2.5rem;
+  color: white;
+  font-size: 1.5rem;
+}
+.resaltado{
   font-weight: bold;
+  color: yellow;
 }
 #textoPrincipal{
   font-size: 2.5rem;
@@ -56,6 +68,9 @@ body {
 }
 
 @media (max-width: 768px) {
+  body {
+    padding-top: 120px;
+  }
   .imagenElectrodomestico {
     height: 120px;
   }
@@ -68,6 +83,9 @@ body {
 }
 
 @media (max-width: 576px) {
+  body {
+    padding-top: 120px;
+  }
   .text-sm-center {
     text-align: center !important;
   }
